--- a/index.html
+++ b/index.html
@@ -121,19 +121,18 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="mainslider__slide">
-                                <img src="img/main/main-slide1.png" alt="slide img">
-                                <div class="row">
+                                <div class="row align-items-center">
                                     <div class="col-xl-5 offset-xl-1 col-md-6 col-sm-8">
                                         <div class="slideinfo">
                                             <p class="mainslider__slidetitle">
-                                                Gluten-free croissants
+                                                Your product here!
                                             </p>
                                             <p class="descr">
-                                                Freshly baked gluten-free croissants for you!
+                                                See how you can have your product shown here
                                             </p>
                                             <a href="#">
                                                 <span>
-                                                    Shop now
+                                                    See Now
                                                     <svg width="23" height="22" viewBox="0 0 23 22" fill="none"
                                                         xmlns="http://www.w3.org/2000/svg">
                                                         <path
@@ -144,25 +143,28 @@
                                             </a>
                                         </div>
                                     </div>
+                                    <div class="col-md-6 col-sm-4">
+                                        <div class="imgwrapper">
+                                            <!-- <img src="img/main/foodimg1.png" alt="img"> -->
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="mainslider__slide">
-                                <img src="img/main/main-slide2.png" alt="slide img">
-                                <div class="row">
+                                <div class="row align-items-center">
                                     <div class="col-xl-5 offset-xl-1 col-md-6 col-sm-8">
                                         <div class="slideinfo">
                                             <p class="mainslider__slidetitle">
-                                                Refer a friend
+                                                Your product here!
                                             </p>
                                             <p class="descr">
-                                                Recommend our service to a friend and get a guaranteed discount for you
-                                                and your friend
+                                                See how you can have your product shown here
                                             </p>
                                             <a href="#">
                                                 <span>
-                                                    Shop now
+                                                    See Now
                                                     <svg width="23" height="22" viewBox="0 0 23 22" fill="none"
                                                         xmlns="http://www.w3.org/2000/svg">
                                                         <path
@@ -171,6 +173,11 @@
                                                     </svg>
                                                 </span>
                                             </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-sm-4">
+                                        <div class="imgwrapper">
+                                            <!-- <img src="img/main/foodimg1.png" alt="img"> -->
                                         </div>
                                     </div>
                                 </div>
@@ -479,9 +486,6 @@
             </div>
         </section>
 
-
-
-
         <section class="infoblock">
             <div class="container">
                 <div class="row g-0 align-items-center">
@@ -525,13 +529,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
-
-
-
 
         <section class="recipesslider">
             <div class="container">
