--- a/recipes-center-selected-recipe.html
+++ b/recipes-center-selected-recipe.html
@@ -153,7 +153,20 @@
                 <div class="recipe-infopanel">
                     <ul>
                         <li>
-                            <p><img src="img/recipes/recipe-ic1.svg" alt="img"> Dairy</p>
+                            <p>
+                                <img src="img/new/recipe-ic0.svg" alt="img"> 
+                                Free
+                                <span>
+                                    <img src="img/recipes/info-icon.svg" alt="info">
+                                </span>
+                            </p>
+                            <ul class="recipe-infopanel__prlist">
+                                <li>Gluten- free</li>
+                                <li>Sugar-free</li>
+                                <li>Peanuts-free</li>
+                                <li>Milk-Free</li>
+                                <li>Chocolate-free</li>
+                            </ul>
                         </li>
                         <li>
                             <p><img src="img/recipes/recipe-ic2.svg" alt="img"> 6 Servings</p>
@@ -168,11 +181,17 @@
                             <p>
                                 <img src="img/recipes/recipe-ic5.svg" alt="img">
                                 Allergens
-                                <span tooltip="I'm up above it!">
+                                <span>
                                     <img src="img/recipes/info-icon.svg" alt="info">
                                 </span>
                             </p>
-
+                            <ul class="recipe-infopanel__prlist">
+                                <li>Peanuts</li>
+                                <li>Soybeans</li>
+                                <li>Milk</li>
+                                <li>Nuts</li>
+                                <li>Mustard</li>
+                            </ul>
                         </li>
                         <li>
                             <p>
@@ -742,6 +761,8 @@
             </div>
         </div>
     </footer>
+    
+    
 
     <script src="js/lib/jquery.js"></script>
     <script src="js/lib/swiper.js"></script>
