--- a/recipes-center.html
+++ b/recipes-center.html
@@ -179,6 +179,56 @@
                                 <option value="3">Category 3</option>
                             </select>
                         </div>
+                        <div class="selectcheck">
+                            <div class="selectcheck__choose">
+                                <p>Free</p>
+                            </div>
+                            <div class="selectcheck__list">
+                                <ul>
+                                    <li>
+                                        <div class="selectcheck__ckeckfield">
+                                            <input type="checkbox" id="c1">
+                                            <label for="c1">
+                                                Gluten - free
+                                            </label>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="selectcheck__ckeckfield">
+                                            <input type="checkbox" id="c2">
+                                            <label for="c2">
+                                                Sugar - free
+                                            </label>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="selectcheck__ckeckfield">
+                                            <input type="checkbox" id="c3">
+                                            <label for="c3">
+                                                Peanuts - free
+                                            </label>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="selectcheck__ckeckfield">
+                                            <input type="checkbox" id="c4">
+                                            <label for="c4">
+                                                Milk - free
+                                            </label>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="selectcheck__ckeckfield">
+                                            <input type="checkbox" id="c5">
+                                            <label for="c5">
+                                                Chocolate - free
+                                            </label>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="recipessearch__searchbox">
                         <div class="searchblock">
@@ -1111,7 +1161,6 @@
             </div>
         </div>
     </div>
-
 
 
 
