--- a/create-recipe.html
+++ b/create-recipe.html
@@ -265,6 +265,40 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="crrecradiobox checkboxes">
+                                    <p>
+                                        Allergic Free:
+                                    </p>
+                                    <div class="checkinpwrap">
+                                        <div class="checkinpbox">
+                                            <input type="checkbox" id="alergic1" name="alergic">
+                                            <label for="alergic1">Gluten-free</label>
+                                        </div>
+                                        <div class="checkinpbox">
+                                            <input type="checkbox" id="alergic2" name="alergic">
+                                            <label for="alergic2">Peanuts-free</label>
+                                        </div>
+                                        <div class="checkinpbox">
+                                            <input type="checkbox" id="alergic3" name="alergic">
+                                            <label for="alergic3">Chocolate-free</label>
+                                        </div>
+                                        <div class="checkinpbox">
+                                            <input type="checkbox" id="alergic4" name="alergic">
+                                            <label for="alergic4">Milk-free</label>
+                                        </div>
+                                        <div class="checkinpbox">
+                                            <input type="checkbox" id="alergic5" name="alergic">
+                                            <label for="alergic5">Sugar-free</label>
+                                        </div>
+                                        <div class="checkinpbox">
+                                            <input type="checkbox" id="alergic6" name="alergic">
+                                            <label for="alergic6">Gluten-free</label>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+
                             </div>
                             <div class="createrec-uploadphoto">
                                 <p class="title">
