--- a/sitemap.html
+++ b/sitemap.html
@@ -16,16 +16,19 @@
         <div class="updatesblock">
             <ul>
                 <li>
-                    <h3>updated pages</h3>
+                    <h3>Updated pages</h3>
                 </li>
                 <li><a href="recipes-center.html" target="_blank">Recipes center</a></li>
                 <li><a href="recipes-center-selected-recipe.html" target="_blank">Recipes center (selected recipe)</a></li>
-                
+                <li><a href="create-recipe.html" target="_blank">Create recipe</a></li>
+                <li>
+                    <h3>Newsletters</h3>
+                    <li><a href="admin-newsletters.html" target="_blank">Admin / Newsletters</a></li>
+                    <li><a href="admin-newsletters-selecttemplate.html" target="_blank">Admin / Newsletters/ select template</a></li>
+                </li>
             </ul>
         </div>
-
         <br><br><br><br> 
-
         <ul>
             <li><a target="_blank" href="index.html">Main</a></li>
             <li><a target="_blank" href="contact-us.html">Contact Us</a></li>
