--- a/sitemap.html
+++ b/sitemap.html
@@ -25,6 +25,9 @@
                     <h3>Newsletters</h3>
                     <li><a href="admin-newsletters.html" target="_blank">Admin / Newsletters</a></li>
                     <li><a href="admin-newsletters-selecttemplate.html" target="_blank">Admin / Newsletters/ select template</a></li>
+                    <li><a href="admin-newsletters-create.html" target="_blank">Admin / Newsletters/ create template</a></li>
+                    <li><a href="admin-newsletters-create-v2.html" target="_blank">Admin / Newsletters/ create template v2</a></li>
+                    <li><a href="admin-newsletters-preview.html" target="_blank">Admin / Newsletters/ preview</a></li>
                 </li>
             </ul>
         </div>
