--- a/admin-newsletters-preview-v2.html
+++ b/admin-newsletters-preview-v2.html
@@ -135,7 +135,6 @@
                         <div class="notification__dropdown">
                             <p class="notification__title">Notifications</p>
                             <div class="notification__list">
-
                                 <a href="#" class="notification__row">
                                     <div class="notification__img">
                                         <img src="img/admin/notification-icon1.svg" alt="icon">
@@ -218,6 +217,7 @@
                                 <p>News shares</p>
 
                                 <div class="prevtemplate">
+
                                     <table cellpadding="0" style="width: 500px;margin: 0 auto;">
                                         <thead>
                                             <tr>
@@ -229,7 +229,11 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                           
+                                            <tr>
+                                                <td width="100%">
+                                                    <img src="img/newsletters/heroimg10.jpg" alt="img" style="width: 100%;background-size:cover;">
+                                                </td>
+                                            </tr>
                                             <tr>
                                                 <td style="padding: 20px 15px;background: #fff;">
                                                     <p
@@ -283,6 +287,19 @@
                                                         let’s go over a few of the key players and why they’re so
                                                         important to this recipe (and a few substitution notes).
                                                     </p>
+                                                    <ol style="padding: 0 0 0 20px; margin: 0 0 20px;">
+                                                        <li style="font-size: 15px;margin-bottom: 15px;">Lorem, ipsum
+                                                            dolor.</li>
+                                                        <li style="font-size: 15px;margin-bottom: 15px;">Lorem, ipsum
+                                                            dolor.</li>
+                                                    </ol>
+                                                    <blockquote
+                                                        style="font-size: 15px;padding-left: 10px;border-left: 2px solid #158466;font-style: italic;">
+                                                        <u>Lorem</u> ipsum, dolor sit amet consectetur adipisicing elit.
+                                                        Dignissimos minima, quibusdam odio doloribus enim at sit error,
+                                                        <strong>corrupti</strong> ratione voluptatibus dicta natus nulla corporis? Fugit
+                                                        ex ut quisquam! <s>Expedita, eveniet!</s>
+                                                    </blockquote>
                                                     <a href="#" style="width: 300px;margin: 25px auto 0;border-radius: 60px;background:#158466;border:none;padding: 12px 22px;display: block; color: #FFF;text-align: center;font-family: Inter,sans-serif;font-size: 14px;font-style: normal;font-weight: 700;line-height: normal;text-transform: uppercase;text-decoration: none;">
                                                         Read more recipe
                                                     </a>
