--- a/sitemap.html
+++ b/sitemap.html
@@ -28,6 +28,8 @@
                     <li><a href="admin-newsletters-create.html" target="_blank">Admin / Newsletters/ create template</a></li>
                     <li><a href="admin-newsletters-create-v2.html" target="_blank">Admin / Newsletters/ create template v2</a></li>
                     <li><a href="admin-newsletters-preview.html" target="_blank">Admin / Newsletters/ preview</a></li>
+                    <li><a href="admin-newsletters-preview-v2.html" target="_blank">Admin / Newsletters/ preview v2</a></li>
+                    <li><a href="admin-newsletters-options.html" target="_blank">Admin / Newsletters/ Recipient options</a></li>
                 </li>
             </ul>
         </div>
