--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="header__nav">
+                    <ul>
+                        <li><a href="#">Product For Special</a></li>
+                        <li><a href="#">New Items</a></li>
+                        <li><a href="#">Recipes Center</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </header>
 
