--- a/seller-acc-product-list-addproduct.html
+++ b/seller-acc-product-list-addproduct.html
@@ -301,10 +301,9 @@
                                                         </div>
                                                     </div>
                                                 </div>
-
                                             </div>
-
                                         </div>
+
                                         <div class="formbox">
                                             <p class="titleinfo">Product Dimensions <img
                                                     src="img/selleracc/question-icon.svg" alt="question"
@@ -381,6 +380,7 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="formbox">
                                             <div class="col-lg-12">
                                                 <div class="inputfield">
@@ -448,6 +448,48 @@
                                                 </div>
                                             </div>
                                         </div>
+
+                                        <div class="formbox">
+                                            <p class="titleinfo">FAQs
+                                                <img src="img/selleracc/question-icon.svg" alt="question"
+                                                    data-bs-toggle="tooltip" data-bs-title="Default tooltip">
+                                            </p>
+                                            <div class="faqquestions">
+                                                <div class="addqboxes">
+                                                    <div class="addqbox">
+                                                        <div class="row">
+                                                            <div class="col-xl-8">
+                                                                <div class="inputfield">
+                                                                    <input type="text" id="posname"
+                                                                        placeholder="Musclefit Protein Pancake Prepared Fast easy..."
+                                                                        required="">
+                                                                    <label for="posname">Question
+                                                                        <img src="img/selleracc/question-icon.svg"
+                                                                            alt="question" data-bs-toggle="tooltip"
+                                                                            data-bs-title="Default tooltip">
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-lg-12">
+                                                                <div class="inputfield">
+                                                                    <textarea
+                                                                        placeholder="This description will be located after the title and price. For example: Etiam non nunc vehicula, facilisis nunc vitae, tristique leo. Suspendisse lectus justo, commodo ut dapibus nec, aliquam vitae nulla. Maecenas "></textarea>
+                                                                    <label for="posname">Answer
+                                                                        <img src="img/selleracc/question-icon.svg"
+                                                                            alt="question" data-bs-toggle="tooltip"
+                                                                            data-bs-title="Default tooltip">
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="addingr">
+                                                    <span class="addbtn">Add FAQ +</span>
+                                                </div>
+                                            </div>
+                                        </div>
+
                                         <div class="formbox">
                                             <p class="selleraddproduct__title">Image (0 of 5)</p>
 
@@ -538,7 +580,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
