--- a/sitemap.html
+++ b/sitemap.html
@@ -14,6 +14,12 @@
 <body>
     <div class="sitemap">
         <div class="updatesblock">
+            <ul style="margin-bottom: 40px;">
+                <li><h3>latest updates</h3></li>
+                <li><a target="_blank" href="index.html">Main</a></li>
+                <li><a href="seller-acc-product-list-addproduct.html" target="_blank">Seller Account / Product list - Add
+                    Product</a></li>
+            </ul>
             <ul>
                 <li>
                     <h3>Updated pages</h3>
