--- a/contact-us.html
+++ b/contact-us.html
@@ -135,6 +135,13 @@
                             <p class="descr">
                                 If you have any questions for us, you can write to us and our manager will contact you.
                             </p>
+                            <div class="contactinfo">
+                                <p>Email Adress</p>
+                                <a href="mailto:contact@info.com">
+                                    <img src="img/contactus/email-ic.svg" alt="icon">
+                                    contact@info.com
+                                </a>
+                            </div>
                             <a href="#" class="iconbtn">
                                 <img src="img/contactus/chat-icon.svg" alt="icon">
                                 <span>Chat</span>
@@ -179,43 +186,6 @@
                 </div>
             </div>
         </section>
-
-        <div class="contactsinformation">
-            <div class="container">
-                <img src="img/background-elements/bgelem3.png" alt="img" class="bgelem">
-                <div class="contactsinformation__wrap">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="contactsinformation__box">
-                                <div class="icon">
-                                    <img src="img/contactus/phone-ic.svg" alt="icon">
-                                </div>
-                                <p class="title">Phone</p>
-                                <a class="descr" href="tel:4315118899">(431) 511 - 8899</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="contactsinformation__box">
-                                <div class="icon">
-                                    <img src="img/contactus/email-ic.svg" alt="icon">
-                                </div>
-                                <p class="title">Email</p>
-                                <a class="descr" href="mailto:contact@info.com">contact@info.com</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="contactsinformation__box">
-                                <div class="icon">
-                                    <img src="img/contactus/local-ic.svg" alt="icon">
-                                </div>
-                                <p class="title">Location</p>
-                                <p class="descr">Taun sloud, AI</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <section class="askedquestions">
             <div class="container">
