--- a/sitemap.html
+++ b/sitemap.html
@@ -16,6 +16,7 @@
         <div class="updatesblock">
             <ul style="margin-bottom: 40px;">
                 <li><h3>latest updates</h3></li>
+                <li><a target="_blank" href="contact-us.html">Contact Us</a></li>
                 <li><a target="_blank" href="index.html">Main</a></li>
                 <li><a href="seller-acc-product-list-addproduct.html" target="_blank">Seller Account / Product list - Add
                     Product</a></li>
